--- a/SelfStart/SelfStartFrontEnd/app/templates/components/appointment-photos.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/appointment-photos.hbs
@@ -15,7 +15,7 @@
       </thead>
 
       <tbody>
-      {{#each photoList as |Image|}}
+      {{#each bookingPhotos as |Image|}}
         <tr>
           <td>{{Image.name}}</td>
           <td>
