--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -41,7 +41,8 @@
       </div>
     </div>
 
+    
     {{yield}}
-
+    <div id="SkypeButton_Call_live:ramzi_abdullahi" style="position: fixed; right: 0; bottom: 0"></div>
   </div>
 </div>
