--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-rehabplan-view.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-rehabplan-view.hbs
@@ -93,7 +93,9 @@
   {{else}}
 
   {{get-assessment-results planID=rehabPlan.id}}
-
+  <button class="green ui button"{{action "Sendtests"}}>
+    SUBMIT
+  </button>
 {{/if}}
 
 
