--- a/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -4,7 +4,7 @@
     {{yield}}
   {{else}}
     <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
-    <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+    <p> {{startingTime}} - {{dayEndingTime}}</p>
   {{/if}}
 
   {{#unless isInteracting}}
@@ -23,7 +23,7 @@
     {{yield}}
   {{else}}
     <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
-    <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+    <p> {{startingTime}} - {{dayEndingTime}}</p>
   {{/if}}
 
   {{#unless isInteracting}}
