--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-settings.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-settings.hbs
@@ -13,7 +13,7 @@
   <div class="ui bottom attached segment pushable">
   <div class="ui visible inverted left vertical sidebar menu">
     <a class="item" {{action "ProfileClick"}}  style=  {{OPC}}>
-      <i class="address card icon"></i>
+      <i class="file icon"></i>
       Profile
     </a>
     <a class="item" {{action "settingsClick"}} style=  {{OAC}}>
