--- a/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/occurrence.hbs
+++ b/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/occurrence.hbs
@@ -5,7 +5,7 @@
       {{yield}}
     {{else}}
       <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
-      <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+      <p> {{startingTime}} - {{dayEndingTime}}</p>
       <h1>testing true isBooked</h1>
     {{/if}}
   {{else}}
@@ -13,7 +13,7 @@
       {{yield}}
     {{else}}
       <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
-      <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+      <p> {{startingTime}} - {{dayEndingTime}}</p>
     {{/if}}
   {{/if}}
 
