--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -32,7 +32,9 @@
             <a href="/admin/accounts" class="item">Accounts</a>
             <a href="/admin/forms" class="item">Forms</a>
             <a href="/admin/manage-selections" class="item">Configure</a>
-            <a id="login" href="../" class="item">Log out</a>
+            {{#link-to 'home'}}
+            <a class="item" {{action "logout"}}>Logout</a>
+            {{/link-to}}
           </div>
         </div>
       </div>
