--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
@@ -18,6 +18,6 @@
     </div>
   </div>
 
-  <div id="SkypeButton_Call" style="position: fixed; right: 0; bottom: 0"></div>
+  {{!-- <div id="SkypeButton_Call" style="position: fixed; right: 0; bottom: 0"></div> --}}
 </div>
 {{/if}}
