--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -209,7 +209,7 @@
             <div class="column">
               <div class="ui payment card" style="box-shadow: none;left: 50%;transform: translate(-50%);">
                 <div class="content" style="text-align: center">
-                  <h3 style="font-weight: bold; text-transform: uppercase;">Assessment Package</h3>
+                  <h3 style="font-weight: bold; text-transform: uppercase;">Assessment Package</h3><br>
                   <br>
                   <div class="cd-price">
                     <span class="cd-currency">$</span>
@@ -238,9 +238,9 @@
                   </table>
 
                 </div>
-                <div class="extra content footer" style="padding: 0 0 0 0;background-color: #2c3452;height: 55px;border-radius: 3px !important;">
-                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button}}</p>
-                </div>
+                {{!-- <div class="extra content footer" style="padding: 0 0 0 0;background-color: #2c3452;height: 55px;border-radius: 3px !important;"> --}}
+                  {{!-- <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button}}</p> --}}
+                {{!-- </div> --}}
               </div>
 
             </div>
@@ -278,9 +278,9 @@
                   </table>
 
                 </div>
-                <div class="extra content footer" style="padding: 0 0 0 0;background-color: #2c3452;height: 55px;border-radius: 3px !important;">
-                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button-package-2}}</p>
-                </div>
+                {{!-- <div class="extra content footer" style="padding: 0 0 0 0;background-color: #2c3452;height: 55px;border-radius: 3px !important;"> --}}
+                  {{!-- <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button-package-2}}</p> --}}
+                {{!-- </div> --}}
               </div>
 
             </div>
@@ -319,9 +319,9 @@
                   </table>
                 </div>
 
-                <div class="extra content footer" style="padding: 0 0 0 0;background-color: #e97d68;height: 55px;border-radius: 3px !important;">
-                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button-package-3}}</p>
-                </div>
+                {{!-- <div class="extra content footer" style="padding: 0 0 0 0;background-color: #e97d68;height: 55px;border-radius: 3px !important;"> --}}
+                  {{!-- <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button-package-3}}</p> --}}
+                {{!-- </div> --}}
               </div>
             </div>
           </div>
