--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -47,7 +47,7 @@
 
     
     {{yield}}
-    {{!-- <div id="SkypeButton_Call_live:ramzi_abdullahi" style="position: fixed; right: 0; bottom: 0"></div> --}}
+    <div id="SkypeButton_Call_live:ramzi_abdullahi" style="position: fixed; right: 0; bottom: 0"></div>
   </div>
 </div>
 {{else}}
