--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -8,7 +8,53 @@
   </div>
 </div>
 
+
+
 <br><br><br>
+
+<div class="ui container segment" id="top" style="margin-left: 0% !important;">
+  <div class="ui grid">
+    <div class="left thirteen wide column" style="margin-top: -5px;">
+      <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">
+        Upcoming Appointment
+      </p>
+    </div>
+  </div>
+  <br><br><br><br>
+
+  <div style="display: inline">
+    <table class="ui fixed table" style="border: none;border-color: white;">
+      <tbody >
+      <tr style="font-weight: bold;">
+        <th>Date</th>
+        <th>Practitioner</th>
+        <th>Reason</th>
+        <th>Appointment type</th>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="ui divider"></div>
+
+  <div  id="clientWindow" style="height:500px; overflow-y: scroll; overflow-x: hidden;">
+
+    <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+      <tbody >
+      {{#each appointmentHistory as |aHistory|}}
+        <tr>
+          <td>{{aHistory.date}}</td>
+          <td>{{aHistory.pName}}</td>
+          <td>{{aHistory.reason}}</td>
+          <td>{{types-appointment aHistory.date aHistory.endDate}}</td>
+        </tr>
+      {{/each}}
+      </tbody>
+    </table>
+  </div>
+</div>
+<br><br><br><br>
+
 <div class="ui centered cards" >
   <div class="card" style="width:250px">
     <div class="content" style="text-align: center">
