--- a/SelfStart/SelfStartFrontEnd/app/templates/components/assessment-table.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/assessment-table.hbs
@@ -25,7 +25,7 @@
             {{/if}}
           </th>
         {{/each}}
-        <th class="center aligned two wide  column">Actions</th>
+        <th class="left aligned two wide  column">Actions</th>
       </tr>
       </tbody>
     </table>
@@ -47,7 +47,7 @@
             </td>
           {{/each}}
 
-          <td class="right aligned one wide column" style="padding-right: 0">
+          <td class="center aligned one wide column" style="padding-right: 0">
             <p>{{display-assessment model=test.form assessment=test}}</p>
           </td>
 
