--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-assessment-results.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-assessment-results.hbs
@@ -3,6 +3,6 @@
     {{get-answers answers = ans form=form question=assess.question qID = assess.question.id assessment=assessmentModel qNumber = index assessid = assessmentModel.id}}
   {{/each}}
 
-  <button class="green ui button"{{action "Sendtests"}}>
-    SUBMIT
-  </button>
+  {{!--<button class="green ui button"{{action "Sendtests"}}>-->
+    <!--SUBMIT-->
+  <!--</button>--}}
