--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-answers.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-answers.hbs
@@ -1,85 +1,79 @@
-<div class="ui form">
-  <br>
   {{#if question.sa}}
-    <label>{{question.questionText}}</label>
-    <br><br>
-    <div class="ui input focus">
-      <li>{{input type="text" value=SAanswer focus-out="saSave"}}</li>
+    <div class="field" style="margin: 1em 0;">
+      <label class="cd-label">{{question.questionText}}</label>
+      {{input class="message" type="text" value = SAanswer focus-out="saSave" required = true}}
     </div>
   {{/if}}
 
   {{#if question.ra}}
-    <label>{{question.questionText}}</label>
-    <br><br>
-    {{ui-rating
-      class="heart"
-      maxRating=10
-      onRate=(action "ratingSave" rateValue=value)
-    }}
+    <div class="field" style="margin: 1em 0;">
+      <label class="cd-label">{{question.questionText}}</label>
+      <br><br>
+      {{ui-rating
+        class="ui massive star rating"
+        maxRating=10
+        required=true
+        onRate=(action "ratingSave" rateValue=value)}}
+    </div>
   {{/if}}
 
   {{#if question.tf}}
-    <br><br>
-    <li>
-      <div class="inline fields">
-        <label>{{question.questionText}}</label>
-        <div class="field">
-          {{ui-radio name="tf" label="Yes" value="True" current=tf onChange=(action "TFtrue")}}
+  <div class="field" style="margin: 1em 0;">
+    <label class="cd-label">{{question.questionText}}</label>
+      <ul class="cd-form-list" required=true>
+        <li>
+          <input type="radio"  value="True"  name="{{question.id}}" current=tf onChange={{action "TFtrue"}}>
+          <label>Yes</label>
+        </li>
 
-        </div>
-        <div class="field">
-          {{ui-radio name="tf" label="No" value="False" current=tf onChange=(action "TFfalse")}}
-        </div>
-      </div>
-    </li>
+        <li>
+          <input type="radio" value="False" name="{{question.id}}" current=tf onChange={{action "TFtrue"}}>
+          <label>No</label>
+        </li>
+      </ul>
+  </div>
+
   {{/if}}
 
   {{#if question.mc}}
-    <br><br>
-    <div class="grouped fields">
-      <label>{{question.questionText}}</label>
-      <div class="field">
-        <div class="ui radio checkbox" value=mcop2>
-          <input name="mc" type="radio" onchange={{action 'mcop1Save'}}>
+    <div class="ui form" style="margin: 1em 0;">
+      <label class="cd-label">{{question.questionText}}</label>
+
+
+      <ul class="cd-form-list" required=true>
+        <li>
+          <input type="radio" name="{{question.id}}" onchange={{action 'mcop1Save'}}>
           <label>{{mc-display question.optionString 0}}</label>
-        </div>
-      </div>
-      <div class="field">
-        <div class="ui radio checkbox">
-          <input name="mc" type="radio" onchange={{action 'mcop2Save'}}>
+        </li>
+
+        <li>
+          <input type="radio" name="{{question.id}}" onchange={{action 'mcop2Save'}}>
           <label>{{mc-display question.optionString 1}}</label>
-        </div>
-      </div>
-      <div class="field">
-        <div class="ui radio checkbox">
-          <input name="mc" type="radio"  onchange={{action 'mcop3Save'}}>
+        </li>
+
+        <li>
+          <input type="radio" name="{{question.id}}" onchange={{action 'mcop3Save'}}>
           <label>{{mc-display question.optionString 2}}</label>
-        </div>
-      </div>
+        </li>
+
       {{#if (number-of-mc question.optionNumber 3)}}
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input name="mc" type="radio"  onchange={{action 'mcop4Save'}}>
-            <label>{{mc-display question.optionString 3}}</label>
-          </div>
-        </div>
+        <li>
+          <input type="radio" name="{{question.id}}" onchange={{action 'mcop4Save'}}>
+          <label>{{mc-display question.optionString 3}}</label>
+        </li>
       {{/if}}
       {{#if (number-of-mc question.optionNumber 4)}}
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input name="mc" type="radio"  onchange={{action 'mcop5Save'}}>
-            <label>{{mc-display question.optionString 4}}</label>
-          </div>
-        </div>
+        <li>
+          <input type="radio" name="{{question.id}}" onchange={{action 'mcop5Save'}}>
+          <label>{{mc-display question.optionString 4}}</label>
+        </li>
       {{/if}}
       {{#if (number-of-mc question.optionNumber 5)}}
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input name="mc" type="radio"  onchange={{action 'mcop6Save'}}>
-            <label>{{mc-display question.optionString 5}}</label>
-          </div>
-        </div>
+        <li>
+          <input type="radio" name="{{question.id}}" onchange={{action 'mcop6Save'}}>
+          <label>{{mc-display question.optionString 5}}</label>
+        </li>
       {{/if}}
+      </ul>
     </div>
   {{/if}}
-</div>
