--- a/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
@@ -30,7 +30,7 @@
           </div>
 
           <div class="right menu inverted">
-
+            {{!-- <a href="/practitioner/askATherapist" class="item">Ask a Therapist</a> --}}
             <a href="/practitioner/clients" class="item">Clients</a>
             <a  href="/practitioner/exercises"class="item">Exercise</a>
             <a  href="/practitioner/rehabplans"class="item">Menu Builder</a>
